[metadata]
name = refind_btrfs
version = 0.1.8
description = Generate rEFInd manual boot stanzas from btrfs snapshots
long_description = file: README.md
keywords = rEFInd, btrfs
url = https://github.com/Venom1991/refind-btrfs
author = Luka Žaja
author_email = luka.zaja@protonmail.com
maintainer = Luka Žaja
maintainer_email = luka.zaja@protonmail.com
license = GNU General Public License v3 or later (GPLv3+)
license_file = LICENSE.txt
platforms = Linux
classifiers = 
        Development Status :: 4 - Beta
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3.9
        Topic :: System :: Boot

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime
    injector
    more-itertools
    pid
    systemd-python
    tomlkit
    transitions
    watchdog
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    refind-btrfs = refind_btrfs:main

[options.packages.find]
where = src

[bdist_wheel]
universal = False
