[metadata]
name = refind_btrfs
version = 0.5.3
description = Generate rEFInd manual boot stanzas from Btrfs snapshots
long_description = file: README.md
keywords = rEFInd, btrfs
url = https://github.com/Venom1991/refind-btrfs
author = Luka Žaja
author_email = luka.zaja@protonmail.com
maintainer = Luka Žaja
maintainer_email = luka.zaja@protonmail.com
license = GNU General Public License v3 or later (GPLv3+)
license_file = LICENSE.txt
platforms = Linux
classifiers = 
        Development Status :: 4 - Beta
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3.9
        Topic :: System :: Boot

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    antlr4-python3-runtime ==4.11.1
    injector ==0.20.1
    more-itertools ==8.14.0
    pid ==3.0.4
    semantic-version ==2.10.0
    systemd-python ==234
    tomlkit ==0.11.4
    transitions ==0.9.0
    typeguard ==2.13.3
    watchdog ==2.1.6
python_requires = >= 3.9

[options.extras_require]
custom_icon = Pillow

[options.entry_points]
console_scripts =
    refind-btrfs = refind_btrfs:main

[options.packages.find]
where = src

[bdist_wheel]
universal = False
